--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-# Dependencies
-node_modules/
-.pnpm-store/
-
-# Testing & Coverage
-coverage/
-.nyc_output/
-
-# Environment Variables (CRITICAL: Never commit secrets)
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # Logs
 logs
 *.log
@@ -22,20 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# IDE & Editor Configuration
-.idea/
-.vscode/
-*.swp
-*.swo
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Framework Specific (Optional - common in Node ecosystem)
-.next/
-.nuxt/
-.serverless/
-
-# Lock files (Comment this out if you DO want to commit lock files - usually you should keep them)
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
