--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "terser": "^5.44.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   }
