--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "terser": "^5.44.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "rollup": "^4.53.3"
   }
 }
